making changes, databaseconnections , adding forneignkeys, adding primarykeys, setting up controllers

--- a/isah_leeromgeving_api_versie1/appsettings.json
+++ b/isah_leeromgeving_api_versie1/appsettings.json
@@ -9,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=WIN-ISAH-WP\\ISAH_SQLEXPRESS;Initial Catalog=ISAH_Digitale_leeromgeving_DBS_versie2;Integrated Security=False; User ID=AnnaMay;Password=roastOfGiel7391;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=db_Isah_leeromgeving_versie2;Integrated Security=False; User ID=AnnaMay;Password=roastOfGiel7391;MultipleActiveResultSets=True"
   }
 }
